--- a/vignettes/Development/Quality control/Publication/Molecular verification - no class.Rmd
+++ b/vignettes/Development/Quality control/Publication/Molecular verification - no class.Rmd
@@ -1,10 +1,10 @@
 ---
-title: "Molecular verification"
+title: "Molecular verification - no class"
 author: "Anne Hids"
 date: "`r Sys.Date()`"
 output: html_document
 editor_options: 
-  chunk_output_type: inline
+  chunk_output_type: console
   markdown: 
     wrap: 72
 ---
@@ -22,9 +22,11 @@ knitr::opts_chunk$set(echo = TRUE, fig.width = 14, fig.height = 8)
 version of Simplebox. First, the k's are compared between R and excel,
 and consequently the steady state masses are compared. This is done for
 5 molecular substances; each of a different chemical class (no class,
-acid, base, neutral and metal).*
+acid, base, neutral and metal). The reason that the verification is performed for 
+each of these classes is that some processes differ per class.*
 
-First, the world needs to be initialized for a substance.
+First, the world needs to be initialized for a substance. In this case, that substance
+is 1-aminoanthraquinone, which does not have a class. 
 
 ```{r Initialize,include=TRUE, echo=TRUE, message=FALSE, warning=FALSE}
 # Create a list with the names of substances
@@ -134,6 +136,27 @@ mergedkaas <- as_tibble(mergedkaas) |> mutate(relDif = diff/k_R)
 
 ```
 
+## Comparing k's
+When comparing k's between R and excel, the goal is that the difference is less
+than 1 percentile for each k. The reason is that smaller differences often are 
+a result of differences in rounding values between excel and R, and not the result
+of mistakes in calculations or different input values. In this vignette two types of 
+k's are compared: diagonal k's and from-to k's.
+
+At the time of this verification, some improvements were already made in the R 
+version versus the excel version. This meant that some k's differ between R and
+excel, but not because the calculations or input values are wrong. In order to 
+still be able to compare the two versions, the 'Test' variable was created. This
+variable is a boolean, that can be used to calculate some processes in R the same 
+way as in excel for the verification, without removing the improvements that are 
+made. When this test variable was used and why will be explained below. 
+
+### Diagonal k's
+Diagonal k's are k's that are on the diagonal of the k matrix, which means they go
+from and to the same compartment. In other words, these k's signify the removal
+of the substance from the subcompartment. Processes that can be involved in the 
+diagonal k's can i.e. be degradation, leaching or escape.
+
 ```{r Plot diagonal differences, echo=FALSE, warning=FALSE}
 #Plot of differences of the diagonals per compartment
 # Plot of differences of the diagonals per compartment
@@ -161,32 +184,27 @@ ggplot(merged_diagonal, aes(x = from, y = reldif)) +
   labs(x = "from", y = "Relative diff")
 ```
 
-```{r Plot k differences, echo=FALSE, warning=FALSE}
-# "To" and "from" in one plot
-ggplot(mergedkaas, aes(x = to, y = from, color = abs(diff))) + 
-  geom_point() +
-  scale_color_gradient(low = "green", high = "red", trans = "log10") +
-  ggtitle(paste0("Absolute differences k's between R and excel for ", substance)) 
+Figures 1 and 2 above show the absolute and relative differences in diagonal k's between R and excel. 
+As can be seen in Figure 2, relative differences larger than 1 percentile are in the lake and
+sediment subcompartments (Table 1). 
 
-ggplot(mergedkaas, aes(x = to, y = from, color = abs(relDif))) + 
-  geom_point() +
-  scale_color_gradient(low = "green", high = "red") +
-  ggtitle(paste0("Relative differences k's between R and excel for ", substance)) 
-```
-
-```{r filter large differences, include=TRUE, echo=FALSE}
-large_differences <- mergedkaas |>
-  mutate(relDif = abs(relDif)) |>
-  filter(relDif > 0.001) 
-
-print(large_differences)
+```{r filter large diagonal differences, include=TRUE, echo=FALSE}
 
 diagonal_diffs <- merged_diagonal |>
   mutate(reldif = abs(reldif)) |>
-  filter(reldif > 0.001)
+  filter(reldif > 0.001) |>
+  arrange(desc(reldif))
 
-print(large_differences)
+print(diagonal_diffs)
+
 ```
+
+#### Lake difference
+
+The relative difference in lake removal rate is caused by lake sedimentation
+being included in R but not in excel. To make an accurate comparison between R 
+and excel, the test variable was used to exclude flows to lake sediment in 
+k_Sedimentation and k_Adsorption.
 
 ```{r Lake removal KEEP FOR FINAL VERSION!}
 lake <- kaas |>
@@ -196,11 +214,7 @@ lake <- kaas |>
 lake2 <- kaas |>
   filter(fromSubCompart == "lake") |>
   filter(fromScale == "Continental")
-# The relative difference in lake removal rate is caused by lake sedimentation
-# being included in R but not in excel.
 
-# To make an accurate comparison between R and excel, the test variable was used 
-# to exclude flows to lake sediment in k_Sedimentation and k_Adsorption.
 ```
 
 ```{r Soil/air/sediment removal + volatilisation when kdeg is given as input value KEEP FOR FINAL VERSION!}
@@ -219,6 +233,38 @@ soil <- kaas |>
 # the resulting k manually to the k in R. 
 
 ```
+
+### From-to k's
+
+```{r Plot k differences, echo=FALSE, warning=FALSE}
+# "To" and "from" in one plot
+ggplot(mergedkaas, aes(x = to, y = from, color = abs(diff))) + 
+  geom_point() +
+  scale_color_gradient(low = "green", high = "red", trans = "log10") +
+  ggtitle(paste0("Absolute differences k's between R and excel for ", substance)) 
+
+ggplot(mergedkaas, aes(x = to, y = from, color = abs(relDif))) + 
+  geom_point() +
+  scale_color_gradient(low = "green", high = "red") +
+  ggtitle(paste0("Relative differences k's between R and excel for ", substance)) 
+```
+
+```{r filter large differences, include=TRUE, echo=FALSE}
+large_differences <- mergedkaas |>
+  mutate(relDif = abs(relDif)) |>
+  filter(relDif > 0.001) |>
+  arrange(desc(reldif))
+
+print(large_differences)
+
+```
+
+As can be seen in Figure 4 above, the largest relative differences in k's go from 
+freshwater and seawater to sediment and back. 
+
+
+
+
 
 ```{r diff aR/aC > s2/s3 KEEP FOR FINAL VERSION!!!}
 
