--- a/vignettes/Development/start.Rmd
+++ b/vignettes/Development/start.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "GettingStarted"
-author: "JS"
-#date: "`r Sys.Date()`"
+title: "Getting Started for Developers"
+author: "Jaap Slootweg, Valerie de Rijk"
+date: "`r Sys.Date()`"
 output:
   github_document: default
   html_document: default
@@ -10,7 +10,7 @@ output:
 ```{r setup, include=FALSE}
 knitr::knit_meta()
 knitr::opts_chunk$set(echo = TRUE)
-projectRoot <- paste(getwd(), "..", sep = "/")
+projectRoot <- paste(getwd(), "..", "..", sep = "/")
 knitr::opts_knit$set(root.dir = projectRoot) #assuming vignette is in a direct subfolder of the project
 ```
 
@@ -22,27 +22,21 @@ Chemical behavior in the environment is often modeled with multimedia fate model
 
 This vignette explains how to manage the object oriented (OO) part of SBOO. In practice you will not notice much from the OO part as you can make R scripts like any other, so that you don't need to thorough understanding of the approach. However, a common understanding of the basics of the SBOO is needed before you can get started. These basics are explained here. 
 An object is a data structure having some attributes and methods which act on its attributes. As such, the objects have both functions, which are called methods, and data. 
-The conceptual structure of SimpleBox are a fate matrix (A) and emission vector (e) to simulate chemical mass (m) balance equations as m = -A^-1 *e. The fate matrix A holds rate constants derived for the environmental fate processes the chemicals are subjected to. The derivation of these rate constants consists of mathematical equations used in physics and chemistry to express the interaction between the chemical substances and the environment. The MS Excel versions of SB 1.0-4.0 include more than 900 of such  equations as formulas. In SBOO these equations are described in 36 separate R scripts that can be used to simulate similar chemical fate processes but under different conditions, e.g. the wet deposition of chemicals at different rain rates or the advective transport in different surface water bodies. These R scripts set up functions to (i) directly derive a rate constant for an environmental fate process, (ii) derive a value for a parameter used in the functions to derive a rate constant or (iii) part of the computation of the mass balance equations with fate matrix A and emission vector e. The methods described in the R scripts need input data in order to run them. Within the data structure of SBOO, these data are explicitly kept separate from the methods. 
+The conceptual structure of SimpleBox are a fate matrix (A) and emission vector (e) to simulate chemical mass (m) balance equations as m = -A^-1 *e. The fate matrix A holds rate constants derived for the environmental fate processes the chemicals are subjected to. The derivation of these rate constants consists of mathematical equations used in physics and chemistry to express the interaction between the chemical substances and the environment. The MS Excel versions of SB 1.0-4.0 include more than 900 of such  equations as formulas. In SBOO these equations are described in <40 separate R scripts that can be used to simulate similar chemical fate processes but under different conditions, e.g. the wet deposition of chemicals at different rain rates or the advective transport in different surface water bodies. These R scripts set up functions to (i) directly derive a rate constant for an environmental fate process, (ii) derive a value for a parameter used in the functions to derive a rate constant or (iii) part of the computation of the mass balance equations with fate matrix A and emission vector e. The methods described in the R scripts need input data in order to run them. Within the data structure of SBOO, these data are explicitly kept separate from the methods. 
 However, both can be accessed similar to dataframes using the $ sign. This will be demonstrated further below.
 
-### GitLab repositories
-During development, SB is split over two projects. This is easier to maintain the future SBOO package from the data and the scripts that help the developments. The repository in gitlab is setup accordingly with separate repositories in a common group: https://gitl01-int-p.rivm.nl/sboogroup
 
 ### Setting up you folders
-In order to use SBOO you need two projects with the parent folder in common. I have them (under campus) in S:\\R\\slootwej and can access them from RStudio on one of the R-servers under respectively /rivm/s/slootwej/sboo and /rivm/s/slootwej/sbooScripts
-More info on the r-servers at rivm can be found at http://wiki.rivm.nl/inwiki/bin/view/StatNMod/RStudio%2BServer
-For more info on gitlab at rivm follow http://wiki.rivm.nl/inwiki/bin/view/Git/WebHome
-Once you have access and this setup completed, you can start working, most likely only in the sbooScripts project
+In order to use SBOO you need two projects with the parent folder in common. 
+Once you have access and this setup completed, you can start working, most likely only in the SBooScripts project.
 
 ### Making changes
-Before changing anything, don't forget to make a branch (under the Git tab, right from the Environment tab, where you can see the variables in your environment). After you made you brilliant update in your local branch, commit it with comments, switch to the main branch, or the master, pull it, switch back to your branch and open a Shell (you are now working in linux) and type the command: git merge main (or git merge master, if that was your "origen"). If the merge fails, we have a problem. Otherwise you can push your branch to the git-server using the Push button. In gitlab you can then make a merge-request and assign the task to merge to me (slootwej).
-Finally, a list of currently available vignettes:
+Before changing anything, don't forget to make a branch (under the Git tab, right from the Environment tab, where you can see the variables in your environment). After you made you brilliant update in your local branch, commit it with comments and push it to the remote on Github. If you want to append your changes to the main branches, create a pull request. It is strongly advised to require at least one reviewer. This reviewer will then be responsible for testing your changes and merging your pull request. 
 
 ### Folder structure
 In the sbooScripts you will find the following folders: data, baseScripts, vignettes, testScripts and newAlgoritmsScripts 
 In the data folder are the csv files, and two versions of the excel version, the original (Molecular) and a Nano version.
-The baseScripts contains R scripts to help initiating the objects you will use. Other scripts in the folder are explained in other vignettes.
-For testing of (your) new scripts and "defining functions" (explained later) you will use newAlgorithmScripts and testScripts
+The baseScripts contains R scripts to help initiating the objects you will use. Other scripts in the folder are explained in other vignettes.For testing of (your) new scripts and "defining functions"  you will use testScripts.
 
 ### Data
 SB uses data of substances, of compartments and so on. These data are stored in csv files. A description of exactly how the data is stored can be found in in vignette "CSVdata.Rmd"
@@ -50,8 +44,4 @@ SB uses data of substances, of compartments and so on. These data are stored in 
 ### Calculation steps
 The "Box" in SimpleBox (SB) is a combination of space and compartment. The space is a subdivision of the nothern hemisphere into 3 "global" scales, and a nested continental and regional scale. The compartments are split into subcompartments like freshwaters and sea, and different type of soil.
 SB calculates a first-order rate of mass flow ("k") from each box (subcompartment/scale) into any other. The rates are associated with processes, like "Advection" or "Deposition". The resulting matrix can then be solved for a steady state. 
-Processes in SBOO are a special class. A method of this class executes a function typical to that process for all the from- and to boxes where this process takes place. Calculating the k's of the processes is usually preceded by calculating variables and flows. These depend on the data in the csv-files and are input to the process-function. Variables and flows also execute a function typical for the variable or flow at hand. How this operates is explained in the vignette "FirstVars.Rmd"
-
-```{r}
-dir("vignettes", "\\.Rmd")
-```
+Processes in SBOO are a special class. A method of this class executes a function typical to that process for all the from- and to boxes where this process takes place. Calculating the k's of the processes is usually preceded by calculating variables and flows. These depend on the data in the csv-files and are input to the process-function. Variables and flows also execute a function typical for the variable or flow at hand. How this operates is explained in the vignette "FirstVars.Rmd". If you want to know more about how users will use this repository, access [Getting-started](vignettes/Getting-started.md)
