--- a/vignettes/Development/Quality control/Publication/Molecular verification - base.Rmd
+++ b/vignettes/Development/Quality control/Publication/Molecular verification - base.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Molecular verification - neutral and no class"
+title: "Molecular verification - base"
 author: "Anne Hids"
 date: "`r Sys.Date()`"
 output: github_document
@@ -19,7 +19,7 @@ knitr::opts_chunk$set(echo = TRUE, fig.width = 14, fig.height = 8)
 ```
 
 This vignette demonstrates the verification process of the molecular
-version of Simplebox for a substance with a neutral class or without a class.
+version of Simplebox for a substance with a base class.
 First, the k's are compared between R and excel,
 and consequently the steady state masses are compared. This is done for
 5 molecular substances; each of a different chemical class (no class,
@@ -38,7 +38,7 @@ Potential_substances <- c("1-aminoanthraquinone", # no class
                           "Sb(III)" # metal
                           ) 
               
-substance <- Potential_substances[1]
+substance <- Potential_substances[3]
 
 source("baseScripts/initWorld_onlyMolec.R")
 ```
@@ -189,8 +189,7 @@ ggplot(merged_diagonal, aes(x = from, y = reldif)) +
 ```
 
 Figures 1 and 2 above show the absolute and relative differences in diagonal k's between R and excel. 
-As can be seen in Figure 2, relative differences larger than 1 percentile are in the lake and
-sediment subcompartments. 
+As can be seen in Figure 2, relative differences larger than 1 percentile are in the lake, river, sea, air and sediment subcompartments. 
 
 ```{r filter large diagonal differences, include=FALSE, echo=FALSE}
 diagonal_diffs <- merged_diagonal |>
@@ -206,19 +205,10 @@ being included in R but not in excel. To make an accurate comparison between R
 and excel, the Test variable was used to exclude flows from lake to lakesediment in 
 the processes k_Sedimentation and k_Adsorption.
 
-```{r Lake removal KEEP FOR FINAL VERSION!, include=FALSE, echo=FALSE}
-lake <- kaas |>
-  filter(fromSubCompart == "lake") |>
-  filter(toSubCompart == "lake")
-
-lake2 <- kaas |>
-  filter(fromSubCompart == "lake") |>
-  filter(fromScale == "Continental")
-```
-
 #### Settling velocity
 
-The difference the diagonal k's for sedimentation comes from a difference in k's for the 
+The difference the diagonal k's going to sediment and river/sea water
+comes from a difference in k's for the 
 sedimentation and resuspension processes. 
 
 This is caused by the use of different formulas to calculate settling
@@ -243,6 +233,15 @@ has an input value, while for other substances this value is calculated. When an
 available, this value has 2 decimals in R but more decimals in excel. This can cause slight 
 differences the k's where this value is used. Therefore, these values were rounded in the 
 excel files that were used for comparison to the R output. 
+
+#### Air
+
+The difference in diagonal k's for air is caused by a different use of variables to 
+calculate k_Adsorption. This process uses the fraction of original species in the (pore)water
+of a subcompartment (FRorig). In Excel, one FRorig value is used to calculate the adsorption for soil
+and one value is used to calculate the adsorption to water. In R however, the FRorig value
+for each specific subcompartment (natural soil, agricultural soil etc.) is used to calculate adsorption. 
+The Test variable was used to calculate this variable with the same FRorig value as in excel. 
 
 ### From-to k's
 
@@ -280,7 +279,11 @@ large_differences <- mergedkaas |>
 As can be seen in Figure 4 above, the k's that have a relative difference larger
 than 1 percentile go from water to sediment or from sediment to water. Changing 
 the formula for calculating settling velocity when Test = TRUE for the sedimentation
-and resuspension processes (explained abovo under 'Settling velocity') also solves these differences.
+and resuspension processes (explained above under 'Settling velocity') also solves these differences.
+
+#### Air
+This problem was also solved by using the Test variable to use the same values for FRorig
+as were used in excel to calculate k_Adsorption
 
 ## Run again with Test=TRUE
 
