--- a/vignettes/Development/Quality control/Publication/Molecular verification - metal.Rmd
+++ b/vignettes/Development/Quality control/Publication/Molecular verification - metal.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Molecular verification - neutral and no class"
+title: "Molecular verification - metal"
 author: "Anne Hids"
 date: "`r Sys.Date()`"
 output: github_document
@@ -19,7 +19,7 @@ knitr::opts_chunk$set(echo = TRUE, fig.width = 14, fig.height = 8)
 ```
 
 This vignette demonstrates the verification process of the molecular
-version of Simplebox for a substance with a neutral class or without a class.
+version of Simplebox for a substance with a metal class.
 First, the k's are compared between R and excel,
 and consequently the steady state masses are compared. This is done for
 5 molecular substances; each of a different chemical class (no class,
@@ -27,7 +27,7 @@ acid, base, neutral and metal). The reason that the verification is performed fo
 each of these classes is that some processes differ per class.
 
 First, the world needs to be initialized for a substance. In this case, that substance
-is 1-aminoanthraquinone, which does not have a class. 
+is Sb(III), which is a metal.
 
 ```{r Initialize,include=TRUE, echo=TRUE, message=FALSE, warning=FALSE}
 # Create a list with the names of substances
@@ -38,7 +38,7 @@ Potential_substances <- c("1-aminoanthraquinone", # no class
                           "Sb(III)" # metal
                           ) 
               
-substance <- Potential_substances[1]
+substance <- Potential_substances[5]
 
 source("baseScripts/initWorld_onlyMolec.R")
 ```
@@ -280,7 +280,25 @@ large_differences <- mergedkaas |>
 As can be seen in Figure 4 above, the k's that have a relative difference larger
 than 1 percentile go from water to sediment or from sediment to water. Changing 
 the formula for calculating settling velocity when Test = TRUE for the sedimentation
-and resuspension processes (explained abovo under 'Settling velocity') also solves these differences.
+and resuspension processes (explained above under 'Settling velocity') also solves these differences.
+
+#### From marine sediment
+```{r}
+ms <- kaas |>
+  filter(fromSubCompart == "marinesediment") |>
+  filter(fromScale == "Regional")
+
+vd <- World$fetchData("VertDistance") |>
+  filter(Scale == "Regional") |>
+  filter(SubCompart == "marinesediment")
+
+vd <- vd$VertDistance
+
+tosea <- ms |>
+  filter(toSubCompart == "sea") |>
+  mutate(k = k*vd)
+
+```
 
 ## Run again with Test=TRUE
 
