--- a/vignettes/Development/Readme.Rmd
+++ b/vignettes/Development/Readme.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Development readme"
-author: "Jaap Slootweg, Joris Quik"
-date: "2023/12/04"
+author: "Jaap Slootweg, Joris Quik, Valerie de Rijk"
+date: "`r Sys.Date()`"
 output: github_document
 editor_options: 
   chunk_output_type: console
@@ -13,14 +13,11 @@ There are several important conventions takes as basis for development of Simple
 
 [^1]: Links are to github documents (.md), but when opening the code in R, the .Rmd files can be used directly and when updated or changes 'knitted' to the md files which are parsed visually on GitHub.
 
-There are two important requirements for SBoo, the algorithms which are all available in SBoo and the data, which are all in SBooScripts.
-
 ## SBoo
 
 Important starting documents to read:
 
--   Naming convention of files in SBoo/R: [AAAreadme.R](https://github.com/rivm-syso/SBoo/blob/main/R/AAAreadme.R "AAAreadme")
+* [Getting-Started](/vignettes/Getting-started.md) : Although not in this folder, before starting to develop it's wise to understand how SB will be used by most users. In this vignette a default calculation is explained. 
+* [Basics for developers](/vignettes/Development/BasicsOfDevelopment.md) : This vignette is a good starting point for starting developers. The underlying structure of the repository is explained here, including the input data. 
 
--   To be completed...
-
--   [History of a flow](vignettes/Development/Advective Flows.md)
+All other vignettes are useful for their own specific focus. 
